THRIFT-497. cpp: Fix TSocket::read and peek on Max OS

git-svn-id: https://svn.apache.org/repos/asf/incubator/thrift/trunk@781626 13f79535-47bb-0310-9956-ffa450edef68